<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/four_create_user"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/txt_user_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/hint_name"
        android:background="@drawable/my_edittext"
        android:layout_marginTop="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/txt_user_job"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:hint="@string/four_enter_your_job"
        android:background="@drawable/my_edittext"
        android:layout_marginTop="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/four_create"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_14sdp"/>

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/four_update"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:text="@string/four_delete"
        android:layout_marginTop="@dimen/_5sdp"
        android:textSize="@dimen/_14sdp"/>

</LinearLayout>