<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGound"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.example.uiwidgets.LinearLayoutDemo">

    <TextView
        android:id="@+id/lnar_heading_layout"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginTop="40sp"
        android:gravity="center"
        android:text="@string/heading_linear_layout"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp" />

    <include layout="@layout/re_use_component" />

    <EditText
        android:id="@+id/lnar_feedback"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/my_edittext"
        android:hint="@string/feedback_details"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp" />

    <CheckBox
        android:id="@+id/lnar_checkbox"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:text="@string/email_response"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp" />

    <Button
        android:id="@+id/lnar_submit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="10dp"
        android:text="@string/submitText"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

</LinearLayout>