<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGound"
    tools:context="com.example.uiwidgets.FrameLayoutDemo">

    <TextView
        android:id="@+id/frml_layout_name"
        android:layout_width="match_parent"
        android:layout_height="30sp"
        android:gravity="center"
        android:text="@string/heading_frame_layout"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_18ssp" />

    <include
        android:id="@+id/frml_include"
        layout="@layout/three_b_reuse_component"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp" />

    <EditText
        android:id="@+id/frml_feedback"
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:layout_marginTop="280dp"
        android:background="@drawable/my_edittext"
        android:hint="@string/feedback_details"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp" />

    <CheckBox
        android:id="@+id/frml_checkbox"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="440dp"
        android:padding="8dp"
        android:text="@string/email_response"
        android:textColor="@color/textColor"
        android:textSize="@dimen/_16ssp" />

    <Button
        android:id="@+id/frml_submit"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_marginTop="500dp"
        android:text="@string/submitText"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

</FrameLayout>