<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_mvc_demo"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.architecture.mvc.controller.MVCController">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_mvc_architecture"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_value1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_value1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/five_zero"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginEnd="@dimen/_20ssp"
        android:layout_marginBottom="@dimen/_20ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_value2"/>


    <EditText
        android:id="@+id/txt_value2"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:inputType="number"
        android:hint="@string/five_enter_value"
        android:layout_marginStart="@dimen/_20ssp"
        android:layout_marginEnd="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="Value 2" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_10ssp"
        app:layout_constraintTop_toBottomOf="@id/txt_value2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:weightSum="5">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_2sdp"
            android:onClick="arethmaticOperation"
            android:text="@string/five_add"
            android:backgroundTint="@color/teal_200"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_2sdp"
            android:onClick="arethmaticOperation"
            android:text="@string/five_sub"
            android:backgroundTint="@color/teal_200"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_2sdp"
            android:text="@string/five_mul"
            android:onClick="arethmaticOperation"
            android:backgroundTint="@color/teal_200"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/_40sdp"
            android:layout_margin="@dimen/_2sdp"
            android:onClick="arethmaticOperation"
            android:text="@string/five_div"
            android:backgroundTint="@color/teal_200"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>